# ztus

./: .gitignore  Cargo.toml  LICENSE  PYTHON_README.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: release-python.yml  release-rust.yml  release.yml
python/examples/: async_upload.py  progress_callback.py  sync_upload.py
python/ztus/: __init__.py
scripts/: test-all.sh  test-local.sh  test-remote.sh
src/: batch.rs  batch_download.rs  checksum.rs  client.rs  config.rs  download.rs  error.rs  lib.rs  main.rs  progress.rs  protocol.rs  python.rs  server.rs  storage.rs  upload.rs
tests/: download_flow.rs  protocol_features.rs  upload_flow.rs
