[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ztus"
version = "1.0.16"  # Replaced by PKG_VERSION in CI/CD
description = "A blazingly fast Rust CLI tool for resumable uploads using the TUS protocol and chunked downloads"
readme = "PYTHON_README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Zach Handley", email = "zachhandley@gmail.com"}
]
keywords = ["tus", "upload", "resumable", "download", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
]

[project.urls]
Homepage = "https://github.com/zachhandley/ztus"
Repository = "https://github.com/zachhandley/ztus"
Documentation = "https://github.com/zachhandley/ztus#readme"
Issues = "https://github.com/zachhandley/ztus/issues"

[tool.maturin]
features = ["python"]
# Bindings type: "bin" for CLI with embedded Python, "pyo3" for Python extension
module-name = "ztus"
# Strip symbols for smaller binary size
strip = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "mypy>=1.19.1",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.14.13",
]
